@@ -1,6 +1,7 @@
 package com.zx.algorithm.leetcode.backtrack;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 /**
@@ -10,29 +11,27 @@ import java.util.List;
  */
 public class Combinations {
 
-    List<List<Integer>> res = new ArrayList<>();
+    private static List<List<Integer>> res = new ArrayList<>();
+    private static LinkedList<Integer> path = new LinkedList<>();
 
     public static void main(String[] args) {
-        Combinations combinations = new Combinations();
-        combinations.combine(4, 2);
-        System.out.println(combinations.res);
+        System.out.println(combine(4, 2));
     }
 
-    public List<List<Integer>> combine(int n, int k) {
-        ArrayList<Integer> tmp = new ArrayList<>();
-        dfs(1, n, k, tmp);
+    private static List<List<Integer>> combine(int n, int k) {
+        dfs(1, n, k);
         return res;
     }
 
-    public void dfs(int start, int n, int k, ArrayList<Integer> tmp) {
-        if (tmp.size() == k) {
-            res.add(new ArrayList<>(tmp));
+    private static void dfs(int start, int n, int k) {
+        if (path.size() == k) {
+            res.add(new ArrayList<>(path));
             return;
         }
-        for (int i = start; i <= n; i++) {
-            tmp.add(i);
-            dfs(i + 1, n, k, tmp);
-            tmp.remove(tmp.size() - 1);
+        for (int i = start; i <= n - (k - path.size()) + 1; i++) {
+            path.add(i);
+            dfs(i + 1, n, k);
+            path.removeLast();
         }
     }
 }
